# HCP_Android

./: README.md  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/cc/hicore/MiraiHCP/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/cc/hicore/MiraiHCP/: IUserService.aidl
app/src/main/cpp/: CMakeLists.txt  app.cpp
app/src/main/java/cc/hicore/MiraiHCP/: ApplicationImpl.java  CrashActivity.java  EditTextFileActivity.java  GlobalEnv.java  MainActivity.java  ManagerSpaceActivity.java  ShizikuHelper.java
app/src/main/java/cc/hicore/MiraiHCP/KeepAliveHelper/: KeepAliveHelper.java  MainServiceAlive.java  ServiceMonitor.java  ShizukuHelper.java  ShizukuService.java
app/src/main/java/cc/hicore/MiraiHCP/LogHelper/: LogUtils.java  PluginLogUtils.java
app/src/main/java/cc/hicore/Utils/: DataUtils.java  FileUtils.java  HttpUtils.java  NameUtils.java  ToastUtils.java  Utils.java
app/src/main/res/drawable/: cat_2.xml  ic_water.xml  main_background_cat_2.xml  toast_back_2.xml
app/src/main/res/layout/: account_item.xml  activity_edit_text_file.xml  activity_main.xml  activity_manager_space.xml  crash_notify_info.xml  dialog_account_set.xml  manager_plugin_item.xml  plugin_input_show_info.xml  plugin_item.xml  plugin_item_control.xml  toast_custom_view.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/test/java/cc/hicore/MiraiHCP/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+14 files in other folders)
